# stm32-freertos-example

./: .gitmodules  .mxproject  CMakeLists.txt  Makefile  stm32-freertos-example.ioc
.devcontainer/: Dockerfile  devcontainer.json
Core/Inc/: stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_it.c
cmake/: arm-gnu-toolchain.cmake
src/: FreeRTOSConfig.h
